--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </header>
       <div class="welcome">
-        <h6><i>City Slice</i></h6>
+        <h6><i>SuperbPizza</i></h6>
         <h5>WORLD OF UNPARALLELED FLAVOURS</h5>
         <h1>PIZZA</h1>
         <a class="order" href="#Order">ORDER NOW</a>
